# store-terminal

./: Cargo.toml  README.md
src/: lib.rs  main.rs  prelude.rs
src/cart/: fut.rs  item.rs  mod.rs  optimizer.rs  optimizer_candidate.rs
src/database/: mod.rs
src/product/: extra.rs  fut.rs  mod.rs
src/promotion/: mod.rs
