[package]
name = "store-terminal"
description = "A store terminal"
version = "0.1.0"
authors = ["Victor Lopez <vhrlopes@gmail.com>"]
edition = "2018"

[dependencies]
futures = "0.1.26"
uuid = { version = "0.7.4", features = ["v4"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.39"
